manifests/seraphim/prod/cluster-api/Namespace-capi-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: capi-system
