manifests/seraphim/prod/cluster-api/Deployment-cluster-api-cluster-api-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cluster-api-operator
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cluster-api
    app.kubernetes.io/name: cluster-api-operator
    clusterctl.cluster.x-k8s.io/core: capi-operator
    control-plane: controller-manager
  name: cluster-api-cluster-api-operator
  namespace: capi-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: cluster-api
      app.kubernetes.io/name: cluster-api-operator
      clusterctl.cluster.x-k8s.io/core: capi-operator
      control-plane: controller-manager
  template:
    metadata:
      labels:
        app: cluster-api-operator
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: cluster-api
        app.kubernetes.io/name: cluster-api-operator
        clusterctl.cluster.x-k8s.io/core: capi-operator
        control-plane: controller-manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
                      - ppc64le
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      automountServiceAccountToken: true
      containers:
        - args:
            - --v=2
            - --health-addr=:9440
            - --diagnostics-address=:8443
            - --leader-elect=true
            - --profiler-address=localhost:6060
          command:
            - /manager
          image: registry.k8s.io/capi-operator/cluster-api-operator:v0.27.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 9440
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          name: manager
          ports:
            - containerPort: 6060
              name: profiler
              protocol: TCP
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 8443
              name: diagnostics
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 9440
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      serviceAccountName: capi-operator-manager
      terminationGracePeriodSeconds: 10
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: capi-operator-webhook-service-cert
