manifests/seraphim/prod/cluster-api/Service-capi-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    clusterctl.cluster.x-k8s.io/core: capi-operator
  name: capi-operator-webhook-service
  namespace: capi-system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    clusterctl.cluster.x-k8s.io/core: capi-operator
    control-plane: controller-manager
