manifests/seraphim/prod/cluster-api/MutatingWebhookConfiguration-capi-operator-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-system/capi-operator-serving-cert
  labels:
    clusterctl.cluster.x-k8s.io/core: capi-operator
  name: capi-operator-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-addonprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vaddonprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - addonproviders
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-bootstrapprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vbootstrapprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - bootstrapproviders
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-controlplaneprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vcontrolplaneprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - controlplaneproviders
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-coreprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vcoreprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - coreproviders
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-infrastructureprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vinfrastructureprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - infrastructureproviders
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-ipamprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vipamprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - ipamproviders
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-operator-webhook-service
        namespace: capi-system
        path: /mutate-operator-cluster-x-k8s-io-v1alpha2-runtimeextensionprovider
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vruntimeextensionprovider.kb.io
    rules:
      - apiGroups:
          - operator.cluster.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - runtimeextensionproviders
    sideEffects: None
